update version variable

--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -58,7 +58,7 @@ jobs:
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         release_name: v${{ env.VERSION }}
-        tag: ${{ steps.bump_version.outputs.new_tag }}
+        tag: ${{ env.VERSION }}
         file: app/build/outputs/apk/release/app-release-unsigned-signed.apk
         asset_name: Field-Book-v${{ env.VERSION }}.apk
         overwrite: true
