--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -3,8 +3,6 @@ on:
   push:
     branches:
       - master
-    paths-ignore:
-      - 'version.properties'
 
 name: do-github-release
 
@@ -14,45 +12,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout the code
-      uses: actions/checkout@v2
-
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+   
+    - name: Build APK
+      id: build
+      uses: ./build-apk.yml
       with:
-        java-version: '11'
+        ref: ${{ github.sha }}
+        bump_version: false
 
     - name: Get Android version
       run: |
         MAJOR=$(cat version.properties | grep majorVersion | cut -d = -f 2)
         MINOR=$(cat version.properties | grep minorVersion | cut -d = -f 2)
         PATCH=$(cat version.properties | grep patchVersion | cut -d = -f 2)
-        BUILD=${{ github.run_number }}
+        BUILD=${{ steps.build.outputs.build_number }}
         echo "The version is $MAJOR.$MINOR.$PATCH.$BUILD"
         echo "VERSION=$MAJOR.$MINOR.$PATCH.$BUILD" >> $GITHUB_ENV
         echo "RELEASE=$MAJOR.$MINOR.$PATCH" >> $GITHUB_ENV
-
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
-
-    - name: Build APK
-      run: ./gradlew app:assembleRelease 
-
-    - name: Sign APK
-      uses: r0adkll/sign-android-release@v1
-      id: sign_app
-      with:
-        releaseDirectory: app/build/outputs/apk/release
-        signingKeyBase64: ${{ secrets.KEYSTORE }}
-        alias: ${{ secrets.KEY_ALIAS }}
-        keyStorePassword: ${{ secrets.STORE_PASSWORD }}
-        keyPassword: ${{ secrets.KEY_PASSWORD }}
-
-    - name: Upload built APK
-      uses: actions/upload-artifact@v2
-      with:
-        name: Build Artifacts
-        path: app/build/outputs/
 
     - name: Release APK
       uses: svenstaro/upload-release-action@v2
