--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -11,13 +11,11 @@ on:
       build_number:
         value: ${{ github.run_number }}
 
+name: build-apk
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout the code
-      uses: actions/checkout@v2
 
     - name: Set up JDK 11
       uses: actions/setup-java@v1
