--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -12,6 +12,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+    - name: Checkout the code
+      uses: actions/checkout@v2
    
     - name: Build APK
       id: build
