--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -17,6 +17,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    - name: Checkout the code
+      uses: actions/checkout@v2
+      with:
+        ref: ${{ inputs.ref }}
+
+    - name: Checkout the code
+      uses: actions/checkout@v2
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
+
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
