--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -18,7 +18,7 @@ jobs:
    
     - name: Build APK
       id: build
-      uses: ./build-apk.yml
+      uses: ./.github/workflows/build-apk.yml
       with:
         ref: ${{ github.sha }}
         bump_version: false
