--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -16,16 +16,11 @@ name: build-apk
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    steps:
     - name: Checkout the code
       uses: actions/checkout@v2
       with:
         ref: ${{ inputs.ref }}
-
-    - name: Checkout the code
-      uses: actions/checkout@v2
-      with:
-        ref: ${{ github.event.pull_request.head.sha }}
 
     - name: Set up JDK 11
       uses: actions/setup-java@v1
