--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -8,27 +8,25 @@ name: do-github-release
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    outputs:
+      build_number: ${{ steps.build.outputs.build_number }}
     steps:
-
-    - name: Checkout the code
-      uses: actions/checkout@v2
-   
-    - name: Build APK
       id: build
       uses: ./.github/workflows/build-apk.yml
       with:
         ref: ${{ github.sha }}
         bump_version: false
-
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
     - name: Get Android version
       run: |
         MAJOR=$(cat version.properties | grep majorVersion | cut -d = -f 2)
         MINOR=$(cat version.properties | grep minorVersion | cut -d = -f 2)
         PATCH=$(cat version.properties | grep patchVersion | cut -d = -f 2)
-        BUILD=${{ steps.build.outputs.build_number }}
+        BUILD=${{ needs.build.outputs.build_number }}
         echo "The version is $MAJOR.$MINOR.$PATCH.$BUILD"
         echo "VERSION=$MAJOR.$MINOR.$PATCH.$BUILD" >> $GITHUB_ENV
         echo "RELEASE=$MAJOR.$MINOR.$PATCH" >> $GITHUB_ENV
