--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -12,32 +12,33 @@ jobs:
     outputs:
       build_number: ${{ steps.build.outputs.build_number }}
     steps:
-      id: build
-      uses: ./.github/workflows/build-apk.yml
-      with:
-        ref: ${{ github.sha }}
-        bump_version: false
+      - name: Build an APK
+        id: build
+        uses: ./.github/workflows/build-apk.yml
+        with:
+          ref: ${{ github.sha }}
+          bump_version: false
   release:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - name: Get Android version
-      run: |
-        MAJOR=$(cat version.properties | grep majorVersion | cut -d = -f 2)
-        MINOR=$(cat version.properties | grep minorVersion | cut -d = -f 2)
-        PATCH=$(cat version.properties | grep patchVersion | cut -d = -f 2)
-        BUILD=${{ needs.build.outputs.build_number }}
-        echo "The version is $MAJOR.$MINOR.$PATCH.$BUILD"
-        echo "VERSION=$MAJOR.$MINOR.$PATCH.$BUILD" >> $GITHUB_ENV
-        echo "RELEASE=$MAJOR.$MINOR.$PATCH" >> $GITHUB_ENV
+      - name: Get Android version
+        run: |
+          MAJOR=$(cat version.properties | grep majorVersion | cut -d = -f 2)
+          MINOR=$(cat version.properties | grep minorVersion | cut -d = -f 2)
+          PATCH=$(cat version.properties | grep patchVersion | cut -d = -f 2)
+          BUILD=${{ needs.build.outputs.build_number }}
+          echo "The version is $MAJOR.$MINOR.$PATCH.$BUILD"
+          echo "VERSION=$MAJOR.$MINOR.$PATCH.$BUILD" >> $GITHUB_ENV
+          echo "RELEASE=$MAJOR.$MINOR.$PATCH" >> $GITHUB_ENV
 
-    - name: Release APK
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        release_name: v${{ env.RELEASE }}
-        tag: ${{ env.VERSION }}
-        file: app/build/outputs/apk/release/app-release-unsigned-signed.apk
-        asset_name: Field-Book-v${{ env.RELEASE }}.apk
-        overwrite: true
+      - name: Release APK
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          release_name: v${{ env.RELEASE }}
+          tag: ${{ env.VERSION }}
+          file: app/build/outputs/apk/release/app-release-unsigned-signed.apk
+          asset_name: Field-Book-v${{ env.RELEASE }}.apk
+          overwrite: true
     
