--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -14,6 +14,8 @@ jobs:
   assemble:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout again
+        uses: actions/checkout@v2
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
