--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,6 +1,9 @@
 on:
   workflow_call:
     inputs:
+       ref:
+        required: true
+        type: string
       bump_version:
         required: true
         type: boolean
@@ -16,7 +19,9 @@ jobs:
     steps:
       - name: Checkout again
         uses: actions/checkout@v2
-
+        with:
+          ref: ${{ inputs.ref }}
+          
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
