--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -58,5 +58,5 @@ jobs:
       - name: Upload built APK
         uses: actions/upload-artifact@v2
         with:
-          name: Build Artifacts
-          path: app/build/outputs/
+          name: Signed APK
+          path: app/build/outputs/apk/release/app-release-unsigned-signed.apk
