--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -28,10 +28,10 @@ jobs:
       - name: Checkout yet again
         uses: actions/checkout@v2
 
-      - name: Download built apk
+      - name: Download built APK
         uses: actions/download-artifact@v3
         with:
-          name: Build Artifacts
+          name: Signed APK
       
       - name: Get Android version
         run: |
@@ -49,7 +49,7 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           release_name: v${{ env.RELEASE }}
           tag: ${{ env.VERSION }}
-          file: app/build/outputs/apk/release/app-release-unsigned-signed.apk
+          file: app-release-unsigned-signed.apk
           asset_name: Field-Book-v${{ env.RELEASE }}.apk
           overwrite: true
     
