--- a/.github/workflows/pr-prerelease.yml
+++ b/.github/workflows/pr-prerelease.yml
@@ -6,23 +6,34 @@ on:
 name: do-pr-prerelease
 
 jobs:
+  checkout:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the code
+        uses: actions/checkout@v2
+
+  build:
+    uses: ./.github/workflows/build-apk.yml
+    secrets: inherit
+    with:
+      ref: ${{ github.event.pull_request.head.sha }}
+      bump_version: false
+
   build:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Checkout the code
+    - name: Checkout yet again
       uses: actions/checkout@v2
       with:
         ref: ${{ github.event.pull_request.head.sha }}
 
-    - name: Build APK
-      id: build
-      uses: ./.github/workflows/build-apk.yml
+    - name: Download built APK
+      uses: actions/download-artifact@v3
       with:
-        ref: ${{ github.event.pull_request.head.sha }}
-        bump_version: false
+        name: Signed APK
 
-     - name: Get Android version
+    - name: Get Android version
       run: |
         MAJOR=$(cat version.properties | grep majorVersion | cut -d = -f 2)
         MINOR=$(cat version.properties | grep minorVersion | cut -d = -f 2)
@@ -32,7 +43,7 @@ jobs:
         echo "VERSION=$MAJOR.$MINOR.$PATCH.$BUILD" >> $GITHUB_ENV
     
     - name: Rename APK file
-      run: mv app/build/outputs/apk/release/app-release-unsigned-signed.apk app/build/outputs/apk/release/Field-Book-v${{ env.VERSION }}-prerelease.apk
+      run: mv app-release-unsigned-signed.apk Field-Book-v${{ env.VERSION }}-prerelease.apk
 
     - name: Attach APK to PR
       uses: gavv/pull-request-artifacts@v1.0.0
@@ -40,4 +51,4 @@ jobs:
         commit: ${{ github.event.pull_request.head.sha }}
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         artifacts: |
-          app/build/outputs/apk/release/Field-Book-v${{ env.VERSION }}-prerelease.apk
+          Field-Book-v${{ env.VERSION }}-prerelease.apk
