--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -18,7 +18,7 @@ jobs:
     uses: ./.github/workflows/build-apk.yml
     secrets: inherit
     with:
-      ref: ${{ github.sha }}
+      ref: ${{ github.token }}
       bump_version: false
 
   release:
