--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -60,7 +60,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up JDK 11
-        uses: ations/setup-java@v1
+        uses: actions/setup-java@v1
         with:
           java-version: '11'
 
