--- a/.github/workflows/alpha-release.yml
+++ b/.github/workflows/alpha-release.yml
@@ -1,5 +1,4 @@
 on:
-  workflow_dispatch:
   push:
     branches:
       - develop
@@ -9,36 +8,59 @@ on:
 name: do-alpha-release
 
 jobs:
-  checkout:
+  build-and-release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v2
 
-  build:
-    uses: ./.github/workflows/build-apk.yml
-    secrets: inherit
-    with:
-      ref: ${{ github.token }}
-      bump_version: true
+    - name: Checkout the code
+      uses: actions/checkout@v2
 
-  release:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout yet again
-        uses: actions/checkout@v2
-
-      - name: Download built APK
-        uses: actions/download-artifact@v3
-        with:
-          name: Signed APK
-
-      - name: Upload to Google Play
-        uses: r0adkll/upload-google-play@v1
-        with:
-          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
-          packageName: com.fieldbook.tracker
-          releaseFiles: app-release-unsigned-signed.apk
-          track: alpha
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: '11'
     
+    - name: Retrieve incremented build number
+      run: |
+         BUILD=$(cat version.properties | grep buildNumber | cut -d = -f 2 | awk '{print $1 + 1}')
+         echo "BUILD=$BUILD" >> $GITHUB_ENV
+
+    # Looks for commit intents following the conventional commits standard, bumps the patch version at minimum
+    # Details here https://github.com/oflynned/android-version-bump#workflow and here https://www.conventionalcommits.org/en/v1.0.0/
+    - name: Bump version
+      id: bump_version
+      uses: oflynned/android-version-bump@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        build_number: ${{ env.BUILD }}and increment
+
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+
+    - name: Build APK
+      run: ./gradlew app:assembleRelease 
+
+    - name: Sign APK
+      uses: r0adkll/sign-android-release@v1
+      id: sign_app
+      with:
+        releaseDirectory: app/build/outputs/apk/release
+        signingKeyBase64: ${{ secrets.KEYSTORE }}
+        alias: ${{ secrets.KEY_ALIAS }}
+        keyStorePassword: ${{ secrets.STORE_PASSWORD }}
+        keyPassword: ${{ secrets.KEY_PASSWORD }}
+
+    - name: Upload built APK
+      uses: actions/upload-artifact@v2
+      with:
+        name: Build Artifacts
+        path: app/build/outputs/
+
+    - name: Release APK to Play Store
+      uses: r0adkll/upload-google-play@v1
+      with:
+        serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+        packageName: com.fieldbook.tracker
+        releaseFiles: app/build/outputs/apk/release/app-release-unsigned-signed.apk
+        track: alpha
