--- a/.github/workflows/pr-prerelease.yml
+++ b/.github/workflows/pr-prerelease.yml
@@ -6,49 +6,80 @@ on:
 name: do-pr-prerelease
 
 jobs:
-  checkout:
+  increment-build:
+    runs-on: ubuntu-latest
+    outputs:
+      version_number: ${{ steps.save_version.outputs.VERSION }}
+    steps:
+
+      - name: Checkout develop
+        uses: actions/checkout@v2
+        with:
+          ref: develop
+
+      - name: Increment and commit build number
+        run: |
+          sed -i 's/\(buildNumber=\)\([0-9]*\)/echo "\1$((\2+1))"/e' version.properties
+          BUILD=$(cat version.properties | grep buildNumber | cut -d = -f 2)
+          git config --global user.name "Automated Build Bump"
+          git add version.properties
+          git commit -m "Automated PR build bump to $BUILD [skip-ci]"
+          git push
+      
+      - name: Save version
+        id: save_version
+        run: |
+          MAJOR=$(cat version.properties | grep majorVersion | cut -d = -f 2)
+          MINOR=$(cat version.properties | grep minorVersion | cut -d = -f 2)
+          PATCH=$(cat version.properties | grep patchVersion | cut -d = -f 2)
+          BUILD=$(cat version.properties | grep buildNumber | cut -d = -f 2)
+          echo "The version is $MAJOR.$MINOR.$PATCH.$BUILD"
+          echo "VERSION=$MAJOR.$MINOR.$PATCH.$BUILD" >> $GITHUB_OUTPUT
+
+  build-and-release:
+    needs: increment-build
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout the code
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
-  build:
-    uses: ./.github/workflows/build-apk.yml
-    secrets: inherit
-    with:
-      ref: ${{ github.event.pull_request.head.sha }}
-      bump_version: false
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: '11'
 
-  release:
-    runs-on: ubuntu-latest
-    steps:
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
 
-    - name: Checkout yet again
-      uses: actions/checkout@v2
-      with:
-        ref: ${{ github.event.pull_request.head.sha }}
+      - name: Build APK
+        run: ./gradlew app:assembleRelease 
 
-    - name: Download built APK
-      uses: actions/download-artifact@v3
-      with:
-        name: Signed APK
+      - name: Sign APK
+        uses: r0adkll/sign-android-release@v1
+        id: sign_app
+        with:
+          releaseDirectory: app/build/outputs/apk/release
+          signingKeyBase64: ${{ secrets.KEYSTORE }}
+          alias: ${{ secrets.KEY_ALIAS }}
+          keyStorePassword: ${{ secrets.STORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
 
-    - name: Get Android version
-      run: |
-        MAJOR=$(cat version.properties | grep majorVersion | cut -d = -f 2)
-        MINOR=$(cat version.properties | grep minorVersion | cut -d = -f 2)
-        PATCH=$(cat version.properties | grep patchVersion | cut -d = -f 2)
-        BUILD=${{ steps.build.outputs.build_number }}
-        echo "The version is $MAJOR.$MINOR.$PATCH.$BUILD"
-        echo "VERSION=$MAJOR.$MINOR.$PATCH.$BUILD" >> $GITHUB_ENV
-    
-    - name: Rename APK file
-      run: mv app-release-unsigned-signed.apk Field-Book-v${{ env.VERSION }}-prerelease.apk
+      - name: Upload built APK${{ env.VERSION }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: Build Artifacts
+          path: app/build/outputs/
+      
+      - name: Rename APK file
+        run: mv app/build/outputs/apk/release/app-release-unsigned-signed.apk app/build/outputs/apk/release/Field-Book-v${{ needs.increment-build.outputs.version_number }}-prerelease.apk
 
-    - name: Attach APK to PR
-      uses: gavv/pull-request-artifacts@v1.0.0
-      with:
-        commit: ${{ github.event.pull_request.head.sha }}
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        artifacts: |
-          Field-Book-v${{ env.VERSION }}-prerelease.apk
+      - name: Attach APK to PR
+        uses: gavv/pull-request-artifacts@v1.0.0
+        with:
+          commit: ${{ github.event.pull_request.head.sha }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          artifacts: |
+            app/build/outputs/apk/release/Field-Book-v${{ needs.increment-build.outputs.version_number }}-prerelease.apk
