make tag name unique

--- a/.github/workflows/alpha-release.yml
+++ b/.github/workflows/alpha-release.yml
@@ -34,6 +34,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         build_number: ${{ env.BUILD }}
+        tag_prefix: 'alpha'
+
 
     - name: Make gradlew executable
       run: chmod +x ./gradlew
