--- a/.github/workflows/alpha-release.yml
+++ b/.github/workflows/alpha-release.yml
@@ -53,10 +53,10 @@ jobs:
         name: Build Artifacts
         path: app/build/outputs/
 
-    - name: Release APK to Play Store
-      uses: r0adkll/upload-google-play@v1
-      with:
-        serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
-        packageName: com.fieldbook.tracker
-        releaseFiles: app/build/outputs/apk/release/app-release-unsigned-signed.apk
-        track: alpha
+    # - name: Release APK to Play Store
+    #   uses: r0adkll/upload-google-play@v1
+    #   with:
+    #     serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+    #     packageName: com.fieldbook.tracker
+    #     releaseFiles: app/build/outputs/apk/release/app-release-unsigned-signed.apk
+    #     track: alpha
