--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -1,72 +1,40 @@
 on:
   push:
     branches:
-      - master
+      - main
 
 name: do-github-release
 
 jobs:
-  determine-version:
+  build-and-release:
     runs-on: ubuntu-latest
-    outputs:
-      release_name: ${{ steps.save_version.outputs.RELEASE }}
-      version_number: ${{ steps.save_version.outputs.VERSION }}
     steps:
 
-      - name: Checkout develop
+      - name: Checkout
         uses: actions/checkout@v2
-        with:
-          ref: develop
-
-      - name: Increment and save build number
-        run: |
-          sed -i 's/\(buildNumber=\)\([0-9]*\)/echo "\1$((\2+1))"/e' version.properties
-          BUILD=$(cat version.properties | grep buildNumber | cut -d = -f 2)
-          echo "BUILD=$BUILD" >> $GITHUB_ENV
 
       # Looks for commit intents following the conventional commits standard, bumps the patch version at minimum
       # Details here https://github.com/oflynned/android-version-bump#workflow and here https://www.conventionalcommits.org/en/v1.0.0/
-      - name: Bump version if not a merge from develop
-        if: |
-          github.ref == 'refs/heads/master' &&
-          !contains(github.event.head_commit.message, 'Merge pull request') ||
-          !contains(github.event.head_commit.message, 'from PhenoApps/develop')
+      - name: Bump version
+        id: bump_version
         uses: oflynned/android-version-bump@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          build_number: ${{ env.BUILD }}
+          build_number: ${{ github.run_number }} 
 
-      - name: Commit just build bump if merge from develop
-        if: |
-          github.ref == 'refs/heads/master' &&
-          contains(github.event.head_commit.message, 'Merge pull request') ||
-          contains(github.event.head_commit.message, 'from PhenoApps/develop')
+      - name: Retrieve version changes
         run: |
-          BUILD=$(cat version.properties | grep buildNumber | cut -d = -f 2)
-          git config --global user.name "Automated Build Bump"
-          git add version.properties
-          git commit -m "Automated master build bump to $BUILD [skip-ci]"
-          git push
-      
-      - name: Save version
-        id: save_version
-        run: |
+          echo "MAJOR_CHANGE=$(git diff HEAD HEAD~1 -- app/version.properties | grep majorVersion || true)" >> $GITHUB_ENV
+          echo "MINOR_CHANGE=$(git diff HEAD HEAD~1 -- app/version.properties | grep minorVersion || true)" >> $GITHUB_ENV
+          echo "Statuses are major change:$MAJOR_CHANGE and minor change: $MINOR_CHANGE"
           MAJOR=$(cat version.properties | grep majorVersion | cut -d = -f 2)
           MINOR=$(cat version.properties | grep minorVersion | cut -d = -f 2)
           PATCH=$(cat version.properties | grep patchVersion | cut -d = -f 2)
           BUILD=$(cat version.properties | grep buildNumber | cut -d = -f 2)
-          echo "The version is $MAJOR.$MINOR.$PATCH.$BUILD"
-          echo "VERSION=$MAJOR.$MINOR.$PATCH.$BUILD" >> $GITHUB_OUTPUT
-          echo "RELEASE=$MAJOR.$MINOR.$PATCH" >> $GITHUB_OUTPUT
-
-  build-and-release:
-    needs: determine-version
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Checkout master
-        uses: actions/checkout@v2
+          echo "VERSION=$MAJOR.$MINOR.$PATCH.$BUILD" >> $GITHUB_ENV
+          echo "RELEASE=$MAJOR.$MINOR" >> $GITHUB_ENV
+          echo "The version is $VERSION and release is $RELEASE"
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
@@ -95,13 +63,27 @@ jobs:
           name: Signed APK
           path: app/build/outputs/
 
-      - name: Release APK
+      # Updates latest release if just a new patch
+      - name: Upload APK
+        if: ${{ !env.MAJOR_CHANGE && !env.MINOR_CHANGE }}
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          release_name: v${{ needs.determine-version.outputs.release_name }}
-          tag: ${{ needs.determine-version.outputs.version_number }}
+          release_name: v${{ env.RELEASE }}
+          tag: ${{ env.VERSION }}
           file: app/build/outputs/apk/release/app-release-unsigned-signed.apk
-          asset_name: Field-Book-v${{ needs.determine-version.outputs.release_name }}.apk
+          asset_name: Field-Book-v${{ env.RELEASE }}.apk
           overwrite: true
+
+      # Drafts a new prerelease if major or minor version has changed 
+      - name: Upload APK
+        if: ${{ env.MAJOR_CHANGE || env.MINOR_CHANGE }}
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          release_name: v${{ env.RELEASE }}
+          tag: ${{ env.VERSION }}
+          file: app/build/outputs/apk/release/app-release-unsigned-signed.apk
+          asset_name: Field-Book-v${{ env.RELEASE }}.apk
+          prerelease: true
     
