--- a/.github/workflows/alpha-release.yml
+++ b/.github/workflows/alpha-release.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Checkout the code
+    - name: Checkout
       uses: actions/checkout@v2
 
     - name: Set up JDK 11
