--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -16,7 +16,6 @@ jobs:
       # Looks for commit intents following the conventional commits standard, bumps the patch version at minimum
       # Details here https://github.com/oflynned/android-version-bump#workflow and here https://www.conventionalcommits.org/en/v1.0.0/
       - name: Bump version
-        id: bump_version
         uses: oflynned/android-version-bump@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -24,6 +23,7 @@ jobs:
           build_number: ${{ github.run_number }} 
 
       - name: Retrieve version changes
+        id: version_check
         run: |
           MAJOR_CHANGE=$(git diff HEAD HEAD~1 -- version.properties | grep +majorVersion | wc -l)
           MINOR_CHANGE=$(git diff HEAD HEAD~1 -- version.properties | grep +minorVersion | wc -l)
@@ -35,10 +35,10 @@ jobs:
           VERSION=$MAJOR.$MINOR.$PATCH.$BUILD
           RELEASE=$MAJOR.$MINOR
           echo "The version is $VERSION and release is $RELEASE"
-          echo "MAJOR_CHANGE=$MAJOR_CHANGE" >> $GITHUB_ENV
-          echo "MINOR_CHANGE=MINOR_CHANGE" >> $GITHUB_ENV
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo "RELEASE=$RELEASE" >> $GITHUB_ENV
+          echo "MAJOR_CHANGE=$MAJOR_CHANGE" >> $GITHUB_OUTPUT
+          echo "MINOR_CHANGE=MINOR_CHANGE" >> $GITHUB_OUTPUT
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+          echo "RELEASE=$RELEASE" >> $GITHUB_OUTPUT
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
@@ -69,7 +69,7 @@ jobs:
 
       # Updates latest release if just a new patch
       - name: Overwrite latest release APK
-        if: env.MAJOR_CHANGE == '0' && env.MINOR_CHANGE == '0'
+        if: (steps.version_check.outputs.MAJOR_CHANGE == '0' && steps.version_check.outputs.MINOR_CHANGE == '0')
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
@@ -81,7 +81,7 @@ jobs:
 
       # Drafts a new prerelease if major or minor version has changed 
       - name: Upload APK as a new prerelease
-        if: env.MAJOR_CHANGE == '1' || env.MINOR_CHANGE == '1'
+        if: (steps.version_check.outputs.MAJOR_CHANGE == '1' || steps.version_check.outputs.MINOR_CHANGE == '1')
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
