--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Checkout
+      - name: Checkout repo
         uses: actions/checkout@v2
 
       # Looks for commit intents following the conventional commits standard, bumps the patch version at minimum
